--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000FE;
-	background-color: #8A4942;
+	color: #0000E3;
+	background-color: #C7B512;
 }
 
 .html
@@ -29,7 +29,7 @@
 
 #page_position_content
 {
-	padding-bottom: 167px;
+	padding-bottom: 7px;
 	width: 0.01px;
 }
 
@@ -48,7 +48,7 @@
 
 #u796
 {
-	z-index: 38;
+	z-index: 39;
 	width: 100px;
 	min-height: 100px;
 	border-style: none;
@@ -62,7 +62,7 @@
 #ppu732
 {
 	width: 0.01px;
-	padding-bottom: 1px;
+	padding-bottom: 0px;
 	margin-right: -10000px;
 	margin-left: 209px;
 }
@@ -75,12 +75,50 @@
 
 #u732
 {
-	z-index: 39;
+	z-index: 40;
 	width: 90px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 33px;
+}
+
+#buttonu4050
+{
+	z-index: 35;
+	width: 470px;
+	height: 150px;
+	-pie-box-shadow: 0px 8px 8px #E5E5E5;
+	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
+	border-color: #787878;
+	border-radius: 10px;
+	position: relative;
+	margin-right: -10000px;
+	left: 130px;
+	background: #271932 url("../images/major_1.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#buttonu4050:hover
+{
+	-pie-box-shadow: 0px 20px 30px #8C8C8C;
+	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
+	width: 470px;
+	height: 150px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+	background: #271932 url("../images/major_2.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+.hidpi #buttonu4050
+{
+	background-image: url("../images/major_1_2x.jpg");
+}
+
+.hidpi #buttonu4050:hover
+{
+	background-image: url("../images/major_2_2x.jpg");
 }
 
 #buttonu4000
@@ -94,7 +132,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 130px;
 	background: #271932 url("../images/starlord1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -123,7 +160,7 @@
 
 #buttonu3962
 {
-	z-index: 37;
+	z-index: 38;
 	width: 310px;
 	height: 150px;
 	-pie-box-shadow: 0px 8px 8px #E5E5E5;
@@ -132,7 +169,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 610px;
+	left: 480px;
 	background: #583FD1 url("../images/twitter_app1-iebuttonu3962-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/twitter_app1.jpg") no-repeat center center;
 	background-color: #583FD1;
@@ -192,7 +229,7 @@
 
 #buttonu1717
 {
-	z-index: 36;
+	z-index: 37;
 	width: 310px;
 	height: 150px;
 	-pie-box-shadow: 0px 8px 8px #E5E5E5;
@@ -224,7 +261,7 @@
 
 #buttonu1608
 {
-	z-index: 35;
+	z-index: 36;
 	width: 310px;
 	height: 150px;
 	-pie-box-shadow: 0px 8px 8px #E5E5E5;
@@ -1181,7 +1218,7 @@
 	background-image: url("../images/quor_2_2x.jpg");
 }
 
-#pbuttonu3873,#pbuttonu1608,#pbuttonu1848,#pbuttonu2135,#pbuttonu1792,#pbuttonu2028,#pbuttonu913,#pbuttonu1834,#pbuttonu1750,#pbuttonu1915
+#pbuttonu4000,#pbuttonu3873,#pbuttonu1848,#pbuttonu2135,#pbuttonu1792,#pbuttonu2028,#pbuttonu913,#pbuttonu1834,#pbuttonu1750,#pbuttonu1915
 {
 	width: 0.01px;
 	margin-top: 10px;
@@ -1256,7 +1293,7 @@
 	background-size: cover;
 }
 
-#pbuttonu1765,#pbuttonu1999,#pbuttonu802
+#pbuttonu1608,#pbuttonu1765,#pbuttonu1999,#pbuttonu802
 {
 	width: 0.01px;
 	margin-top: 11px;
@@ -1339,7 +1376,7 @@
 
 #buttonu3776
 {
-	z-index: 41;
+	z-index: 42;
 	width: 58px;
 	height: 58px;
 	border-color: #787878;
@@ -1410,7 +1447,7 @@
 
 #u3804-4
 {
-	z-index: 43;
+	z-index: 44;
 	width: 630px;
 	min-height: 31px;
 	background-color: transparent;
