--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000000;
-	background-color: #B1E528;
+	color: #0000ED;
+	background-color: #9DC93A;
 }
 
 .html
@@ -48,7 +48,7 @@
 
 #u796
 {
-	z-index: 40;
+	z-index: 41;
 	width: 100px;
 	min-height: 100px;
 	border-style: none;
@@ -75,12 +75,101 @@
 
 #u732
 {
-	z-index: 41;
+	z-index: 42;
 	width: 90px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 33px;
+}
+
+#buttonu4121
+{
+	z-index: 40;
+	width: 310px;
+	height: 150px;
+	-pie-box-shadow: 0px 8px 8px #E5E5E5;
+	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
+	border-color: #787878;
+	border-radius: 10px;
+	position: relative;
+	margin-right: -10000px;
+	left: 130px;
+	background: #484848 url("../images/vakit_1-iebuttonu4121-fr.png") no-repeat left center;
+	background: rgba(0,0,0,0) url("../images/vakit_1.jpg") no-repeat left center;
+	background-color: #484848;
+	background-size: cover;
+}
+
+#buttonu4121:hover
+{
+	-pie-box-shadow: 0px 20px 30px #8C8C8C;
+	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
+	width: 310px;
+	height: 150px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+	background: #484848 url("../images/vakit_2-iebuttonu4121-r-fr.png") no-repeat left center;
+	background: rgba(0,0,0,0) url("../images/vakit_2.jpg") no-repeat left center;
+	background-color: #484848;
+	background-size: cover;
+}
+
+#buttonu4121.ButtonSelected
+{
+	width: 310px;
+	height: 150px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+	background: #484848 url("../images/vakit_1-iebuttonu4121-fr.png") no-repeat left center;
+	background: rgba(0,0,0,0) url("../images/vakit_1.jpg") no-repeat left center;
+	background-color: #484848;
+	background-size: cover;
+}
+
+#buttonu4050
+{
+	z-index: 35;
+	width: 470px;
+	height: 150px;
+	-pie-box-shadow: 0px 8px 8px #E5E5E5;
+	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
+	border-color: #787878;
+	border-radius: 10px;
+	margin-top: 10px;
+	position: relative;
+	background: #20062E url("../images/major_1.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#buttonu4050:hover
+{
+	-pie-box-shadow: 0px 20px 30px #8C8C8C;
+	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
+	width: 470px;
+	height: 150px;
+	min-height: 0px;
+	margin: 10px 0px 0px;
+	background: #20062E url("../images/major_2.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+.hidpi #buttonu4050
+{
+	background-image: url("../images/major_1_2x.jpg");
+}
+
+.hidpi #buttonu4050:hover
+{
+	background-image: url("../images/major_2_2x.jpg");
+}
+
+#pbuttonu4092
+{
+	width: 0.01px;
+	padding-bottom: 0px;
+	margin-right: -10000px;
+	margin-left: 689px;
 }
 
 #buttonu4092
@@ -93,8 +182,6 @@
 	border-color: #787878;
 	border-radius: 10px;
 	position: relative;
-	margin-right: -10000px;
-	left: 130px;
 	background: #37CB57 url("../images/back_1-copy-iebuttonu4092-fr.png") no-repeat left center;
 	background: rgba(0,0,0,0) url("../images/back_1-copy.gif") no-repeat left center;
 	background-color: #37CB57;
@@ -108,7 +195,7 @@
 	width: 310px;
 	height: 150px;
 	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
+	margin: 0px;
 	background: #37CB57 url("../images/login_2-iebuttonu4092-r-fr.png") no-repeat left center;
 	background: rgba(0,0,0,0) url("../images/login_2.jpg") no-repeat left center;
 	background-color: #37CB57;
@@ -152,49 +239,6 @@
 	background-image: url("../images/starlord2_2x.jpg");
 }
 
-#pbuttonu4050
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-left: 689px;
-}
-
-#buttonu4050
-{
-	z-index: 35;
-	width: 470px;
-	height: 150px;
-	-pie-box-shadow: 0px 8px 8px #E5E5E5;
-	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
-	border-color: #787878;
-	border-radius: 10px;
-	position: relative;
-	background: #20062E url("../images/major_1.jpg") no-repeat center center;
-	background-size: cover;
-}
-
-#buttonu4050:hover
-{
-	-pie-box-shadow: 0px 20px 30px #8C8C8C;
-	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
-	width: 470px;
-	height: 150px;
-	min-height: 0px;
-	margin: 0px;
-	background: #20062E url("../images/major_2.jpg") no-repeat center center;
-	background-size: cover;
-}
-
-.hidpi #buttonu4050
-{
-	background-image: url("../images/major_1_2x.jpg");
-}
-
-.hidpi #buttonu4050:hover
-{
-	background-image: url("../images/major_2_2x.jpg");
-}
-
 #buttonu3962
 {
 	z-index: 38;
@@ -204,8 +248,8 @@
 	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
 	border-color: #787878;
 	border-radius: 10px;
-	margin-top: 10px;
 	position: relative;
+	margin-right: -10000px;
 	background: #583FD1 url("../images/twitter_app1-iebuttonu3962-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/twitter_app1.jpg") no-repeat center center;
 	background-color: #583FD1;
@@ -219,7 +263,7 @@
 	width: 310px;
 	height: 150px;
 	min-height: 0px;
-	margin: 10px 0px 0px;
+	margin: 0px -10000px 0px 0px;
 	background: #543ED1 url("../images/twitter_app2-iebuttonu3962-r-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/twitter_app2.jpg") no-repeat center center;
 	background-color: #543ED1;
@@ -237,6 +281,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 320px;
 	background: #C58516 url("../images/tie_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -274,7 +319,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 480px;
 	background: #412863 url("../images/slack_1-iebuttonu1717-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/slack_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -306,6 +350,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 320px;
 	background: #412863 url("../images/follow2-iebuttonu1608-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/follow2.gif") no-repeat center center;
 	background-color: #412863;
@@ -326,6 +371,38 @@
 	background-size: cover;
 }
 
+#buttonu1462
+{
+	z-index: 30;
+	width: 310px;
+	height: 150px;
+	-pie-box-shadow: 0px 8px 8px #E5E5E5;
+	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
+	border-color: #787878;
+	border-radius: 10px;
+	position: relative;
+	margin-right: -10000px;
+	left: 640px;
+	background: #412863 url("../images/eki_1-iebuttonu1462-fr.png") no-repeat center center;
+	background: rgba(0,0,0,0) url("../images/eki_1.jpg") no-repeat center center;
+	background-color: #412863;
+	background-size: cover;
+}
+
+#buttonu1462:hover
+{
+	-pie-box-shadow: 0px 20px 30px #8C8C8C;
+	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
+	width: 310px;
+	height: 150px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+	background: #412863 url("../images/eki_2-iebuttonu1462-r-fr.png") no-repeat center center;
+	background: rgba(0,0,0,0) url("../images/eki_2.jpg") no-repeat center center;
+	background-color: #412863;
+	background-size: cover;
+}
+
 #buttonu1895
 {
 	z-index: 32;
@@ -337,7 +414,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 320px;
 	background: #424144 url("../images/love_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -375,6 +451,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 480px;
 	background: #7B746A url("../images/awake_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -399,38 +476,6 @@
 .hidpi #buttonu1806:hover
 {
 	background-image: url("../images/awake_2_2x.jpg");
-}
-
-#buttonu1462
-{
-	z-index: 30;
-	width: 310px;
-	height: 150px;
-	-pie-box-shadow: 0px 8px 8px #E5E5E5;
-	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
-	border-color: #787878;
-	border-radius: 10px;
-	position: relative;
-	margin-right: -10000px;
-	left: 480px;
-	background: #412863 url("../images/eki_1-iebuttonu1462-fr.png") no-repeat center center;
-	background: rgba(0,0,0,0) url("../images/eki_1.jpg") no-repeat center center;
-	background-color: #412863;
-	background-size: cover;
-}
-
-#buttonu1462:hover
-{
-	-pie-box-shadow: 0px 20px 30px #8C8C8C;
-	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
-	width: 310px;
-	height: 150px;
-	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
-	background: #412863 url("../images/eki_2-iebuttonu1462-r-fr.png") no-repeat center center;
-	background: rgba(0,0,0,0) url("../images/eki_2.jpg") no-repeat center center;
-	background-color: #412863;
-	background-size: cover;
 }
 
 #buttonu1848
@@ -849,7 +894,7 @@
 	background-size: cover;
 }
 
-#pbuttonu1806,#pbuttonu1820
+#pbuttonu1820
 {
 	width: 0.01px;
 	margin-top: 9px;
@@ -1254,7 +1299,7 @@
 	background-image: url("../images/quor_2_2x.jpg");
 }
 
-#pbuttonu3873,#pbuttonu1848,#pbuttonu2135,#pbuttonu1792,#pbuttonu2028,#pbuttonu913,#pbuttonu1834,#pbuttonu1750,#pbuttonu1915
+#pbuttonu3962,#pbuttonu1717,#pbuttonu1895,#pbuttonu1848,#pbuttonu2135,#pbuttonu1792,#pbuttonu2028,#pbuttonu913,#pbuttonu1834,#pbuttonu1750,#pbuttonu1915
 {
 	width: 0.01px;
 	margin-top: 10px;
@@ -1329,7 +1374,7 @@
 	background-size: cover;
 }
 
-#pbuttonu1608,#pbuttonu1765,#pbuttonu1999,#pbuttonu802
+#pbuttonu1765,#pbuttonu1999,#pbuttonu802
 {
 	width: 0.01px;
 	margin-top: 11px;
@@ -1412,7 +1457,7 @@
 
 #buttonu3776
 {
-	z-index: 43;
+	z-index: 44;
 	width: 58px;
 	height: 58px;
 	border-color: #787878;
@@ -1483,7 +1528,7 @@
 
 #u3804-4
 {
-	z-index: 45;
+	z-index: 46;
 	width: 630px;
 	min-height: 31px;
 	background-color: transparent;
